[#142] [BUG] [CSP][PRO] Documentos no visibles de un Proyecto se muestran en el perfil de investigación